# IRAS4A_ammonia

./: .gitignore  Splatalogue_query.py  ammonia_hfs_model.py  analysis_utils.py  calculate_moment0.py  classes.py  fit_2D_continuum.py  fit_hfs.py  fit_hfs_v2.py  generate_fit_result_latex_table.py  matplotlibrc  mcmc_tools.py  plot_LIME_model.py  plot_MCMC_diag.py  plot_moment0.py  plot_spectrum.ipynb  plot_spectrum.py  plot_spectrum_v2.py  plot_utils.py  pyproject.toml  quick_check.ipynb  residual_map_analysis.ipynb  revise.md  sourcedictionary.py  spectroscopic_data.py
data/LIME/: IRAS4A_0.08Msun_NH2D_33_postprocessed.fits.spectrum.pickle  IRAS4A_0.08Msun_NH2D_44_postprocessed.fits.spectrum.pickle  IRAS4A_1.0Msun_NH2D_33_postprocessed.fits.spectrum.pickle  IRAS4A_1.0Msun_NH2D_44_postprocessed.fits.spectrum.pickle
data/LaTeX/: fit_table.txt
data/spectrum/: IRAS4A1_NH2D_33.robust2.0.dv0.2.clean.image.pbcor.fits.spectrum.pickle  IRAS4A1_NH2D_33.robust2.0.dv0.2.clean.image.pbcor.rebin.fits.spectrum.pickle  IRAS4A1_NH2D_33.robust2.0.dv1.0.clean.image.pbcor.fits.spectrum.pickle  IRAS4A1_NH2D_44.robust2.0.dv0.2.clean.image.pbcor.fits.spectrum.pickle  IRAS4A1_NH2D_44.robust2.0.dv0.2.clean.image.pbcor.rebin.fits.spectrum.pickle  IRAS4A1_NH2D_44.robust2.0.dv1.0.clean.image.pbcor.fits.spectrum.pickle  IRAS4A1_NH3_11.robust2.0.dv0.2.clean.image.pbcor.fits.spectrum.pickle  IRAS4A1_NH3_11.robust2.0.dv0.2.clean.image.pbcor.rebin.fits.spectrum.pickle  IRAS4A1_NH3_11.robust2.0.dv1.0.clean.image.pbcor.fits.spectrum.pickle  (+33 more)
